* Test fixes * Reduced scss bundle size * Redirect public dist file

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "public",
+    "public": "dist/mmishler-personal-website",
     "ignore": [
       "firebase.json",
       "**/.*",
